Made a text box that shows the total sum of each result of every calculator in donate.html.

--- a/donate.html
+++ b/donate.html
@@ -87,27 +87,14 @@
 
     <section>
         <h1 class="charitiesH1 text-center underline">Charities</h1>
-    </section>
-
-    <section>
-        <h2>Calculate the total sum here:</h2>
-        <form>
-            <input type="text" name="" class="screenTotal" placeholder="Add up your spendings" />
-        </form>
-        <button type="button" class="btn-equal7 calcBtnStyle calcBtnGreen">=</button>
-        <button type="button" class="btn-clear7 calcBtnStyle calcBtnRed">C</button>
-        <form>
-            <input type="text" name="" class="screenTotal2" placeholder="Result" />
-        </form>
-        <button type="button" class="btn-clear8 calcBtnStyle calcBtnRed">C</button>
-
+        <p class="donatePageTextColor text-center">You will be directed to the pages of the charity organisations. We do not provide donation services.</p>
     </section>
 
     <section id="AsiaAfricaSection">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6">
-                    <div class="text-center donatePageHeadings">
+                    <div class="text-center donatePageTextColor">
                         <h2>Asia:</h2>
                     </div>
 
@@ -275,7 +262,7 @@
 
 
                 <div class="col-sm-6">
-                    <div class="text-center donatePageHeadings">
+                    <div class="text-center donatePageTextColor">
                         <h2>Africa:</h2>
 
                     </div>
@@ -439,8 +426,9 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6">
-                    <div class="col-12 text-center">
-                        <h2>Asia</h2>
+                    <div class="col-12 text-center donatePageTextColor">
+                        <h3>Calculate Your Donations for Asia</h3>
+                        <p>Find the total sum of all calculators at the bottom of this page. Make sure to clear the screen, before calculating something new, if you want the total sum calculator to work correctly!</p>
                         <form>
                             <input type="text" name="" class="screen" />
                         </form>
@@ -505,8 +493,9 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <div class="col-12 text-center">
-                        <h2>Africa</h2>
+                    <div class="col-12 text-center donatePageTextColor">
+                        <h3>Calculate Your Donations for Africa</h3>
+                        <p>Find the total sum of all calculators at the bottom of this page. Make sure to clear the screen, before calculating something new, if you want the total sum calculator to work correctly!</p>
                         <form>
                             <input type="text" name="" class="screen2" />
                         </form>
@@ -613,7 +602,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6">
-                    <div class="text-center donatePageHeadings">
+                    <div class="text-center donatePageTextColor">
                         <h2>South America:</h2>
 
                     </div>
@@ -706,7 +695,7 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <div class="text-center donatePageHeadings">
+                    <div class="text-center donatePageTextColor">
                         <h2>Europe:</h2>
 
                     </div>
@@ -769,8 +758,9 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6">
-                    <div class="col-12 text-center">
-                        <h2>South America</h2>
+                    <div class="col-12 text-center donatePageTextColor">
+                        <h3>Calculate Your Donations for South America</h3>
+                        <p>Find the total sum of all calculators at the bottom of this page. Make sure to clear the screen, before calculating something new, if you want the total sum calculator to work correctly!</p>
                         <form>
                             <input type="text" name="" class="screen3" />
                         </form>
@@ -835,8 +825,9 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <div class="col-12 text-center">
-                        <h2>Europe</h2>
+                    <div class="col-12 text-center donatePageTextColor">
+                        <h3>Calculate Your Donations for Europe</h3>
+                        <p>Find the total sum of all calculators at the bottom of this page. Make sure to clear the screen, before calculating something new, if you want the total sum calculator to work correctly!</p>
                         <form>
                             <input type="text" name="" class="screen4" />
                         </form>
@@ -937,7 +928,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6">
-                    <div class="text-center donatePageHeadings">
+                    <div class="text-center donatePageTextColor">
                         <h2>North America:</h2>
 
                     </div>
@@ -987,7 +978,7 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <div class="text-center donatePageHeadings">
+                    <div class="text-center donatePageTextColor">
                         <h2>Oceania:</h2>
                     </div>
                     <div class="container-fluid">
@@ -1029,8 +1020,9 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6">
-                    <div class="col-12 text-center">
-                        <h2>North America</h2>
+                    <div class="col-12 text-center donatePageTextColor">
+                        <h3>Calculate Your Donations for North America</h3>
+                        <p>Find the total sum of all calculators at the bottom of this page. Make sure to clear the screen, before calculating something new, if you want the total sum calculator to work correctly!</p>
                         <form>
                             <input type="text" name="" class="screen5" />
                         </form>
@@ -1095,8 +1087,9 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <div class="col-12 text-center">
-                        <h2>Oceania</h2>
+                    <div class="col-12 text-center donatePageTextColor">
+                        <h3>Calculate Your Donations for Oceania</h3>
+                        <p>Find the total sum of all calculators at the bottom of this page. Make sure to clear the screen, before calculating something new, if you want the total sum calculator to work correctly!</p>
                         <form>
                             <input type="text" name="" class="screen6" />
                         </form>
@@ -1107,9 +1100,9 @@
                                 <div class="buttons">
                                     <!-- Symbol buttons -->
                                     <button type="button" class="calcBtn6 calcBtnStyle calcBtnYellow" data-num6="*">*</button>
-                                    <button type="button" class="calcBtn6 calcBtnStyle calcBtnYellow" data-num="/">/</button>
-                                    <button type="button" class="calcBtn6 calcBtnStyle calcBtnYellow" data-num="-">-</button>
-                                    <button type="button" class="calcBtn6 calcBtnStyle calcBtnYellow" data-num="+">+</button>
+                                    <button type="button" class="calcBtn6 calcBtnStyle calcBtnYellow" data-num6="/">/</button>
+                                    <button type="button" class="calcBtn6 calcBtnStyle calcBtnYellow" data-num6="-">-</button>
+                                    <button type="button" class="calcBtn6 calcBtnStyle calcBtnYellow" data-num6="+">+</button>
 
 
                                 </div>
@@ -1160,6 +1153,27 @@
                     </div>
                 </div>
 
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col align-self-center text-center donatePageTextColor">
+                    <h2>Total Sum:</h2>
+                    <form>
+                        <!--<input type="text" name="" class="screenTotal" placeholder="Add up your spendings" />-->
+                        <input type="text" value="" class="TotalScreen"></input>
+
+                    </form>
+                    <!--<button type="button" class="btn-equal7 calcBtnStyle calcBtnGreen">=</button>-->
+                    <button type="button" class="btn-clear7 calcBtnStyle calcBtnRed">C</button>
+                    <!--<form>
+                        <input type="text" name="" class="screenTotal2" placeholder="Result" />
+                    </form>
+                    <button type="button" class="btn-clear8 calcBtnStyle calcBtnRed">C</button>-->
+                </div>
             </div>
         </div>
     </section>
