Included Vanilla JavaScript effects on the homepage, so that the sections appear on scroll.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Charity Base: Homepage</title>
 </head>
 
-<body> 
+<body>
 
     <nav class="navbar navbar-expand-sm  navbar-light fixed-top">
 
@@ -53,7 +53,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-9">
-                    <div class="textHP1 text-center">
+                    <div class="textHP1 text-center" id="textEffect">
                         <h1 class="underline">Help People In Need.</h1>
                         <p class="text">Around 795 million people in the world do not have enough food, in order to live a healthy and active life. However, you can help solving this problem by donating to save lives and help to change a part of this world!
                             <br />
@@ -67,15 +67,15 @@
             </div>
         </div>
     </div>
-    
+
     <div class="hpimg-4">
         <!-- BG-IMG: https://pxhere.com/en/photo/1053497 -->
         <div class="container-fluid section2-text" id="section2-text">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <section class="section3 text-effect ">
+                    <section class="section3" id="textEffect2">
                         <h2 class="header">The Poverty Trap.</h2>
-                        <p class="text2">When a country does not have a enough capital, i.e. machinary, tools and buildings, people strive to produce goods and services. Therefore, they economic development and growth decreases and it becomes difficult to gain the capital
+                        <p class="text2 ">When a country does not have a enough capital, i.e. machinary, tools and buildings, people strive to produce goods and services. Therefore, they economic development and growth decreases and it becomes difficult to gain the capital
                             that they require. As a result, they get trapped into a poverty cycle. However, you could change lives today by donating! Find more information, <a href="statistics.html">here!</a>
 
                             <span class="bottomLine"></span>
@@ -102,7 +102,7 @@
 
     <div class="hpimg-2">
         <div class="container-fluid section3-text" id="section3-text">
-            <div class="row">
+            <div class="row" id="textEffect3">
                 <div class="col-sm-12 text-center">
                     <section class="section">
                         <h2 class="header">The Struggle for Food and Health Care.</h2>
@@ -136,7 +136,7 @@
         <div class="container-fluid section4-text" id="section4-text">
             <div class="row">
                 <div class="col-md-10 mx-auto text-center">
-                    <section class="section2">
+                    <section class="section2" id="textEffect4">
                         <h2 class="headerGDP">
                             Lowest Economic Outputs.
                         </h2>
@@ -170,20 +170,16 @@
                         -->
                     </section>
                 </div>
-                <div class="col-sm-12">
-                    <div class="hptextimg-4">
-
-                    </div>
-                </div>
             </div>
         </div>
     </div>
     
+
     <div class="hpimg-5">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-3">
-                    <div class="textHP2">
+                    <div class="textHP2" id="textEffect5">
                         <h2>Please Donate!</h2>
                         <a href="donate.html" value="donateButtonHP" class="btn btn-primary donateButtonStyleHP">Donate here</a>
                     </div>
