--- a/statistics.html
+++ b/statistics.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>
+<body id="donateBody">
 
     <nav class="navbar navbar-expand-sm  navbar-light fixed-top">
 
@@ -79,12 +79,14 @@
             <h2>Costs of Food in Various Countries.</h2>
             <div id="costs-of-meals-chart"></div>
             <p>NG-Nigeria, DRC-Democratic Republic of Congo, HT-Haiti, MZ-Mozambique, YE-Yemen, SO-Somalia, SoP-State of Palestine, BD-Bangladesh, SV-El Salvador, ID-Indonesia, JO-Jordan, NY, USA-New York, USA</p>
+            <p>The prices for meals in many countries are a lot more expensive, than one would think! Not just adults, but even children need to work hard and miss out on education just to have food for themselves and their families. The chart above shows how expansive it is, in some of the countries that a meal costs the most in the world.</p>
         </div>
 
         <div class="chartStyling3">
             <h2>Lowest Gini Index Estimates From the World Bank</h2>
             <div id="gini-index-chart"></div>
             <p>ZA-South Africa, BW-Botswana, HT-Haiti, NM-Namibia, CA-Central African Republic</p>
+            <p>The chart above shows the values of the lowest gini index values in the world. This indicates how unequally the countries' income is distributed per 20% of the labour forces, which causes poor people to remain poor and rich people to stay rich.</p>
         </div>
 
     </section>
