--- a/statistics.html
+++ b/statistics.html
@@ -53,23 +53,66 @@
                         <h2>Lowest GDP Per Capita In The World (Projected).</h2>
                     </div>
                     <div id="country-selector"></div>
+
                     <div class="chartStyling1">
                         <div id="gdp-per-capita-chart"></div>
-                        <div id="gini-coefficient-chart"></div>
-                        <div id="unemployment-rate-pie-chart"></div>
-                        <div id="unemployment-rate-female"></div>
-                        <p>DRC-Demcratic Republic of Congo, MZ-Mozambique, UG-Uganda, TJ-Tajikistan, YE-Yemen, HT-Haiti, ET-Ethopia, TZ-Tanzania, KG-Kyrgystan, UZ-Uzbekistan</p>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
                 <div class="col-12">
-                    <div class="chartText1">
-                        <p class="text1">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam quidem, numquam amet aliquam blanditiis quae error. Cupiditate veritatis sapiente dignissimos doloribus qui omnis officia excepturi praesentium voluptas consequuntur quas reprehenderit est
-                            laboriosam aspernatur ad autem consequatur ex quidem doloremque dolore aperiam totam, tempora enim! Atque officia optio corrupti, repudiandae repellat ipsa reprehenderit corporis nam culpa nihil numquam amet, saepe quod deserunt,
-                            aut assumenda molestias aspernatur temporibus, necessitatibus eos! Corrupti, voluptates, illo! Cupiditate at, recusandae voluptatibus nesciunt harum iusto ratione ad eligendi itaque corporis accusantium voluptate inventore
-                            beatae voluptas molestias quasi porro unde, eveniet consequatur, illo veniam deserunt! Reprehenderit, molestiae, sed.
+                    <p class="text1 chartText1">
+                        The chart shows the countries with the lowest GDP per capita in the world. This indicates that the Demcratic Republic of Congo has the lowest standards of living, as a low gross domestic product means that there is not enough output in the economy for
+                        the country's entire population.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div id="gini-coefficient-chart"></div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <p class="text1 chartText1">
+                        The chart above shows the values of the lowest gini coefficient values in the world. This indicates how unequally the countries' income is distributed per 20% of the labour forces, which causes poor people to remain poor and wealthy people to stay wealthy.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div id="unemployment-rate-pie-chart"></div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <p class="text1 chartText1">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam quidem, numquam amet aliquam blanditiis quae error. Cupiditate veritatis sapiente dignissimos doloribus qui omnis officia excepturi praesentium voluptas consequuntur quas reprehenderit est
+                        laboriosam aspernatur ad autem consequatur ex quidem doloremque dolore aperiam totam, tempora enim! Atque officia optio corrupti, repudiandae repellat ipsa reprehenderit corporis nam culpa nihil numquam amet, saepe quod deserunt,
+                        aut assumenda molestias aspernatur temporibus, necessitatibus eos! Corrupti, voluptates, illo! Cupiditate at, recusandae voluptatibus nesciunt harum iusto ratione ad eligendi itaque corporis accusantium voluptate inventore beatae
+                        voluptas molestias quasi porro unde, eveniet consequatur, illo veniam deserunt! Reprehenderit, molestiae, sed.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+
+                    <div id="unemployment-rate-female"></div>
+                    <p class="text1 chartText1">
+                        DRC-Demcratic Republic of Congo, MZ-Mozambique, UG-Uganda, TJ-Tajikistan, YE-Yemen, HT-Haiti, ET-Ethopia, TZ-Tanzania, KG-Kyrgystan, UZ-Uzbekistan
                         </p>
-                    </div>
                 </div>
             </div>
         </div>
@@ -79,14 +122,14 @@
             <h2>Costs of Food in Various Countries.</h2>
             <div id="costs-of-meals-chart"></div>
             <p>NG-Nigeria, DRC-Democratic Republic of Congo, HT-Haiti, MZ-Mozambique, YE-Yemen, SO-Somalia, SoP-State of Palestine, BD-Bangladesh, SV-El Salvador, ID-Indonesia, JO-Jordan, NY, USA-New York, USA</p>
-            <p>The prices for meals in many countries are a lot more expensive, than one would think! Not just adults, but even children need to work hard and miss out on education just to have food for themselves and their families. The chart above shows how expansive it is, in some of the countries that a meal costs the most in the world.</p>
+            <p>The prices for meals in many countries are a lot more expensive, than one would think! Not just adults, but even children need to work hard and miss out on education just to have food for themselves and their families. The chart above shows
+                how expansive it is, in some of the countries that a meal costs the most in the world.</p>
         </div>
 
         <div class="chartStyling3">
             <h2>Lowest Gini Index Estimates From the World Bank</h2>
             <div id="gini-index-chart"></div>
             <p>ZA-South Africa, BW-Botswana, HT-Haiti, NM-Namibia, CA-Central African Republic</p>
-            <p>The chart above shows the values of the lowest gini index values in the world. This indicates how unequally the countries' income is distributed per 20% of the labour forces, which causes poor people to remain poor and rich people to stay rich.</p>
         </div>
 
     </section>
