Worked on the composite line charts and the second pie chart on the 'Statistics' page.

--- a/statistics.html
+++ b/statistics.html
@@ -112,7 +112,19 @@
                     <div id="unemployment-rate-female"></div>
                     <p class="text1 chartText1">
                         DRC-Demcratic Republic of Congo, MZ-Mozambique, UG-Uganda, TJ-Tajikistan, YE-Yemen, HT-Haiti, ET-Ethopia, TZ-Tanzania, KG-Kyrgystan, UZ-Uzbekistan
-                        </p>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+
+                    <div id="unemployment-rate-male"></div>
+                    <p class="text1 chartText1">
+                        DRC-Demcratic Republic of Congo, MZ-Mozambique, UG-Uganda, TJ-Tajikistan, YE-Yemen, HT-Haiti, ET-Ethopia, TZ-Tanzania, KG-Kyrgystan, UZ-Uzbekistan
+                    </p>
+                    <div id="gender-unemployment-rate-pie-chart"></div>
                 </div>
             </div>
         </div>
