Added the pie charts back to statistics.html.

--- a/donate.html
+++ b/donate.html
@@ -17,7 +17,7 @@
     <title>Charity Base: Donate Page</title>
 </head>
 
-<body id="donateBody">
+<body id="bodyColor">
 
     <nav class="navbar navbar-expand-sm  navbar-light fixed-top">
 
