--- a/map.html
+++ b/map.html
@@ -10,7 +10,7 @@
     <title>Charity Base: Map</title>
 </head>
 
-<body>
+<body id="bodyColor">
     <nav class="navbar navbar-expand-sm navbar-light">
 
         <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
@@ -41,7 +41,10 @@
         </div>
     </nav>
     
-    
+    <div class="text-center">
+        <h1>Landmap</h1>
+        <h2>Use the map below, in order to have a general overview of what countries require help and find quick informations about them by clicking on the markers.</h2>
+    </div>
     <div id="map"></div>
 
 
