--- a/statistics.html
+++ b/statistics.html
@@ -50,7 +50,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="statisticsHeading">
-                        <h2>Lowest GDP Per Capita In The World (Projected).</h2>
+                        <h1>Statistics</h1>
                     </div>
                 </div>
             </div>
@@ -58,6 +58,7 @@
         <div class="container-fluid chartStyling">
             <div class="row">
                 <div class="col-12">
+                    <h2>Lowest GDP Per Capita In The World (Projected)</h2>
                     <div id="country-selector"></div>
                     <div id="gdp-per-capita-chart"></div>
                 </div>
@@ -76,6 +77,7 @@
         <div class="container-fluid chartStyling">
             <div class="row">
                 <div class="col-12">
+                    <h2>Gini Coefficient Chart</h2>
                     <div id="gini-coefficient-chart"></div>
                 </div>
             </div>
@@ -92,6 +94,7 @@
         <div class="container-fluid chartStyling">
             <div class="row">
                 <div class="col-12">
+                    <h2>Unemployment Rate Pit Chart</h2>
                     <div id="unemployment-rate-pie-chart"></div>
                 </div>
             </div>
@@ -111,6 +114,7 @@
         <div class="container-fluid chartStyling">
             <div class="row">
                 <div class="col-12">
+                    <h2>Unemployment Rate Female</h2>
                     <div id="unemployment-rate-female"></div>
                 </div>
             </div>
@@ -127,6 +131,7 @@
         <div class="container-fluid chartStyling">
             <div class="row">
                 <div class="col-12">
+                    <h2>Unemployment Rate Male</h2>
                     <div id="unemployment-rate-male"></div>
                 </div>
             </div>
