--- a/statistics.html
+++ b/statistics.html
@@ -14,38 +14,39 @@
 </head>
 
 <body id="bodyColor">
+    <header>
+        <nav class="navbar navbar-expand-sm  navbar-light fixed-top">
 
-    <nav class="navbar navbar-expand-sm  navbar-light fixed-top">
+            <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
+            <a href="index.html" class="navbar-brand navBrandColor">Charity Base</a>
 
-        <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-        <a href="index.html" class="navbar-brand navBrandColor">Charity Base</a>
-
-        <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
+            <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
   
             <span class="navbar-toggler-icon"></span></button>
 
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a href="index.html" class="nav-link hvr-shutter-out-vertical">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="map.html" class="nav-link hvr-shutter-out-vertical">Map</a>
-                </li>
-                <li class="nav-item">
-                    <a href="statistics.html" class="nav-link hvr-shutter-out-vertical">Statistics</a>
-                </li>
-                <li class="nav-item">
-                    <a href="donate.html" class="nav-link hvr-shutter-out-vertical">Donate</a>
-                </li>
-                <li class="nav-item">
-                    <a href="contact.html" class="nav-link hvr-shutter-out-vertical">Contacts</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a href="index.html" class="nav-link hvr-shutter-out-vertical">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="map.html" class="nav-link hvr-shutter-out-vertical">Map</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="statistics.html" class="nav-link hvr-shutter-out-vertical">Statistics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="donate.html" class="nav-link hvr-shutter-out-vertical">Donate</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contact.html" class="nav-link hvr-shutter-out-vertical">Contacts</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
-    <section>
+    <article>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
@@ -55,10 +56,11 @@
                 </div>
             </div>
         </div>
+
         <div class="container-fluid chartStyling">
             <div class="row">
                 <div class="col-12">
-                    <h2>Lowest GDP Per Capita In The World (Projected)</h2>
+                    <h2 class="graph-color">Lowest GDP Per Capita In The World (Projected)</h2>
                     <div id="country-selector"></div>
                     <div id="gdp-per-capita-chart"></div>
                 </div>
@@ -67,6 +69,10 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
+                    <p class="chartText">
+                        DRC-Demcratic Republic of Congo, MZ-Mozambique, UG-Uganda, TJ-Tajikistan, YE-Yemen, HT-Haiti, ET-Ethopia, TZ-Tanzania, KG-Kyrgystan, UZ-Uzbekistan
+                    </p>
+
                     <p class="chartText">
                         The chart shows the countries with the lowest GDP per capita in the world. This indicates that the Demcratic Republic of Congo has the lowest standards of living, as a low gross domestic product means that there is not enough output in the economy for
                         the country's entire population.
@@ -77,7 +83,7 @@
         <div class="container-fluid chartStyling">
             <div class="row">
                 <div class="col-12">
-                    <h2>Gini Coefficient Chart</h2>
+                    <h2 class="graph-color">Gini Coefficient Chart</h2>
                     <div id="gini-coefficient-chart"></div>
                 </div>
             </div>
@@ -85,6 +91,9 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
+                    <p class="chartText">
+                        DRC-Demcratic Republic of Congo, MZ-Mozambique, UG-Uganda, TJ-Tajikistan, YE-Yemen, HT-Haiti, ET-Ethopia, TZ-Tanzania, KG-Kyrgystan, UZ-Uzbekistan
+                    </p>
                     <p class="chartText">
                         The chart above shows the values of the lowest gini coefficient values in the world. This indicates how unequally the countries' income is distributed per 20% of the labour forces, which causes poor people to remain poor and wealthy people to stay wealthy.
                     </p>
@@ -94,7 +103,7 @@
         <div class="container-fluid chartStyling">
             <div class="row">
                 <div class="col-12">
-                    <h2>Unemployment Rate Pit Chart</h2>
+                    <h2 class="graph-color">Unemployment Rate Pie Chart</h2>
                     <div id="unemployment-rate-pie-chart"></div>
                 </div>
             </div>
@@ -103,10 +112,7 @@
             <div class="row">
                 <div class="col-12">
                     <p class="chartText">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam quidem, numquam amet aliquam blanditiis quae error. Cupiditate veritatis sapiente dignissimos doloribus qui omnis officia excepturi praesentium voluptas consequuntur quas reprehenderit est
-                        laboriosam aspernatur ad autem consequatur ex quidem doloremque dolore aperiam totam, tempora enim! Atque officia optio corrupti, repudiandae repellat ipsa reprehenderit corporis nam culpa nihil numquam amet, saepe quod deserunt,
-                        aut assumenda molestias aspernatur temporibus, necessitatibus eos! Corrupti, voluptates, illo! Cupiditate at, recusandae voluptatibus nesciunt harum iusto ratione ad eligendi itaque corporis accusantium voluptate inventore beatae
-                        voluptas molestias quasi porro unde, eveniet consequatur, illo veniam deserunt! Reprehenderit, molestiae, sed.
+                        The pie chart above, compares some of the countries with the highest total unemployment rates on Earth.
                     </p>
                 </div>
             </div>
@@ -114,7 +120,7 @@
         <div class="container-fluid chartStyling">
             <div class="row">
                 <div class="col-12">
-                    <h2>Unemployment Rate Female</h2>
+                    <h2 class="graph-color">Unemployment Rate Female</h2>
                     <div id="unemployment-rate-female"></div>
                 </div>
             </div>
@@ -123,7 +129,7 @@
             <div class="row">
                 <div class="col-12">
                     <p class="chartText">
-                        DRC-Demcratic Republic of Congo, MZ-Mozambique, UG-Uganda, TJ-Tajikistan, YE-Yemen, HT-Haiti, ET-Ethopia, TZ-Tanzania, KG-Kyrgystan, UZ-Uzbekistan
+                        The graph above, compares how high the unemployment rates are for women, in some of the countries with the highest values. Currently Yemen has the highest result, whereas Tanziana has the lowest.
                     </p>
                 </div>
             </div>
@@ -131,8 +137,26 @@
         <div class="container-fluid chartStyling">
             <div class="row">
                 <div class="col-12">
-                    <h2>Unemployment Rate Male</h2>
+                    <h2 class="graph-color">Unemployment Rate Male</h2>
                     <div id="unemployment-rate-male"></div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <p class="chartText">
+                        The graph above, compares how high the unemployment rates are for men, in some of the countries with the highest values. Currently Mozambique has the highest result, whereas Uganda has the lowest.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid chartStyling">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="graph-color">Unemployment Rates Pie Chart</h2>
+                    <div id="gender-unemployment-rate-pie-chart"></div>
                 </div>
             </div>
         </div>
@@ -141,9 +165,9 @@
             <div class="row">
                 <div class="col-12">
                     <p class="chartText">
-                        DRC-Demcratic Republic of Congo, MZ-Mozambique, UG-Uganda, TJ-Tajikistan, YE-Yemen, HT-Haiti, ET-Ethopia, TZ-Tanzania, KG-Kyrgystan, UZ-Uzbekistan
+                        The chart above, compares the total unemployment rates for both genders of all the countries shown in the other two unemployment rate graphs, above this pie chart. It indicates that the female unemployment rate is higher, than the male unemployment rate,
+                        which means that there are more women, who are struggling to find jobs, than man in those countries, even though they are all actively looking for work.
                     </p>
-                    <div id="gender-unemployment-rate-pie-chart"></div>
                 </div>
             </div>
         </div>
@@ -151,7 +175,7 @@
         <div class="container-fluid chartStyling">
             <div class="row">
                 <div class="col-12">
-                    <h2>Costs of Food in Various Countries.</h2>
+                    <h2 class="graph-color">Costs of Food in Various Countries.</h2>
                     <div id="costs-of-meals-chart"></div>
                 </div>
             </div>
@@ -171,7 +195,7 @@
             </div>
         </div>
 
-    </section>
+    </article>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
