Fixed problems there were with email.js, so that emails would not be sent every time the Contact page would be opened and so that the message of a user would be sent correctly.

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,6 @@
     <script type="text/javascript">
         (function() {
             emailjs.init("user_jBNHynPWhUv5jwDizH0QT");
-            //emailjs.send("gmail", "first_template", { name: "Rian", notes: "The charity that I would like to include to this website is ..." });
         })();
     </script>
 
@@ -66,7 +65,7 @@
         </div>
 
         <div class="container-fluid">
-            <form onsubmit="return sendMail(this);" method="POST">
+            <form onsubmit="return sendMail(this);">
 
                 <div class="row">
                     <div class="forms center-form">
