--- a/statistics.html
+++ b/statistics.html
@@ -42,6 +42,11 @@
                         <a href="contact.html" class="nav-link hvr-shutter-out-vertical">Contacts</a>
                     </li>
                 </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a href="javascript: dc.filterAll(); dc.redrawAll();" class="btn btn-success reset-button">Reset all filters</a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </header>
@@ -56,7 +61,6 @@
                 </div>
             </div>
         </div>
-
         <div class="container-fluid chartStyling">
             <div class="row">
                 <div class="col-12">
