Added social media icons to the homepage footer and added the footer to the other pages of the website.

--- a/index.html
+++ b/index.html
@@ -192,27 +192,42 @@
     </article>
     <aside>
         <div class="social-media-button">
-            <a href="facebook.com" class="facebook"><i class="fab fa-facebook"></i></a>
-            <a href="twitter.com" class="twitter"><i class="fab fa-twitter"></i></a>
-            <a href="youtube.com" class="youtube"><i class="fab fa-youtube"></i></a>
-            <a href="instagram.com" class="instagram"><i class="fab fa-instagram"></i></a>
+            <li class="facebook-aside"><a href="http://www.facebook.com" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a></li>
+            <li class="twitter-aside"><a href="http://www.twitter.com" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a></li>
+            <li class="youtube-aside"><a href="http://www.youtube.com" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a></li>
+            <li class="instagram-aside"><a href="http://www.instagram.com" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a></li>
         </div>
     </aside>
     <footer id="footer">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6">
+                <div class="col-6 text-center">
                     <h2>Contact Me</h2>
                     <ul class="footer-list">
                         <li>Phone number: 1234</li>
-                        <li class="footer-link"><a href="contact.html">Send Me a Message</a></li>
+                        <li ><a href="contact.html" class="footer-link">Send Me a Message</a></li>
                     </ul>
                 </div>
-                <div class="col-6">
+                <div class="col-6 text-center">
                     <h2>Find out how to donate</h2>
                     <ul class="footer-list">
-                        <li><a href="dontate.html">Donate</a></li>
-                        <li><a href="map.html">Map</a></li>
+                        <li><a href="dontate.html" class="footer-link">Donate</a></li>
+                        <li><a href="map.html" class="footer-link">Map</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <ul class="social-media-icons-footer">
+                        <li class="facebook-footer"><a href="facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        <li class="twitter-footer"><a href="twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li class="youtube-footer"><a href="youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                        <li class="instagram-footer"><a href="instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
                     </ul>
                 </div>
             </div>
