--- a/statistics.html
+++ b/statistics.html
@@ -116,6 +116,9 @@
             <div class="row">
                 <div class="col-12">
                     <p class="chartText">
+                        DRC-Demcratic Republic of Congo, MZ-Mozambique, UG-Uganda, TJ-Tajikistan, YE-Yemen, HT-Haiti, ET-Ethopia, TZ-Tanzania, KG-Kyrgystan, UZ-Uzbekistan
+                    </p>
+                    <p class="chartText">
                         The pie chart above, compares some of the countries with the highest total unemployment rates on Earth.
                     </p>
                 </div>
@@ -179,7 +182,7 @@
         <div class="container-fluid chartStyling">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="graph-color">Costs of Food in Various Countries.</h2>
+                    <h2 class="graph-color">Costs of Food in Various Countries or City.</h2>
                     <div id="costs-of-meals-chart"></div>
                 </div>
             </div>
@@ -189,7 +192,7 @@
             <div class="row">
                 <div class="col-12">
                     <p class="chartText">
-                        NG-Nigeria, DRC-Democratic Republic of Congo, HT-Haiti, MZ-Mozambique, YE-Yemen, SO-Somalia, SoP-State of Palestine, BD-Bangladesh, SV-El Salvador, ID-Indonesia, JO-Jordan, NY, USA-New York, USA
+                        NG-Nigeria, DRC-Democratic Republic of Congo, HT-Haiti, MZ-Mozambique, YE-Yemen, SO-Somalia, SoP-State of Palestine, BD-Bangladesh, SV-El Salvador, ID-Indonesia, JO-Jordan, NY-New York
                     </p>
                     <p class="chartText">
                         The prices for meals in many countries are a lot more expensive, than one would think! Not just adults, but even children need to work hard and miss out on education just to have food for themselves and their families. The chart above shows how expansive
@@ -199,6 +202,50 @@
             </div>
         </div>
     </article>
+
+    <aside>
+        <div class="social-media-button">
+            <li class="facebook-aside"><a href="http://www.facebook.com" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a></li>
+            <li class="twitter-aside"><a href="http://www.twitter.com" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a></li>
+            <li class="youtube-aside"><a href="http://www.youtube.com" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a></li>
+            <li class="instagram-aside"><a href="http://www.instagram.com" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a></li>
+        </div>
+    </aside>
+    <footer id="footer">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-6 text-center">
+                    <h2>Contact Me</h2>
+                    <ul class="footer-list">
+                        <li>Phone number: 1234</li>
+                        <li><a href="contact.html" class="footer-link">Send Me a Message</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 text-center">
+                    <h2>Find out how to donate</h2>
+                    <ul class="footer-list">
+                        <li><a href="dontate.html" class="footer-link">Donate</a></li>
+                        <li><a href="map.html" class="footer-link">Map</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <ul class="social-media-icons-footer">
+                        <li class="facebook-footer"><a href="facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        <li class="twitter-footer"><a href="twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li class="youtube-footer"><a href="youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                        <li class="instagram-footer"><a href="instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
